Added Checkout a Book Functionality
Added files for the check out a book function of the SLS.

--- a/addBook.html
+++ b/addBook.html
@@ -22,7 +22,7 @@
           required
         />
 
-        <label for="autBookL">Author : </label>
+        <label for="autBookL">Athor : </label>
         <input
           type="text"
           placeholder="First Name, Last Name"
