--- a/sHome.html
+++ b/sHome.html
@@ -15,7 +15,7 @@
       <!--Directory of Buttons-->
       <button
         class="checkBookBTN"
-        onclick="window.location.href='addBook.html'"
+        onclick="window.location.href='checkBook.html'"
       >
         Check out a Book
       </button>
