--- a/tHome.html
+++ b/tHome.html
@@ -17,7 +17,7 @@
 
       <button
         class="checkBookBTN"
-        onclick="window.location.href='addBook.html'"
+        onclick="window.location.href='checkBook.html'"
       >
         Check out a Book
       </button>
