added a book functionality

--- a/sHome.html
+++ b/sHome.html
@@ -20,7 +20,7 @@
         Check out a Book
       </button>
 
-      <button class="rtnBookBTN" onclick="window.location.href='addBook.html'">
+      <button class="rtnBookBTN" onclick="window.location.href='retBook.html'">
         Return a Book
       </button>
 
