--- a/studLogin.html
+++ b/studLogin.html
@@ -13,7 +13,13 @@
         <button type="button" class="cancelBtn">Cancel</button>
         <br /><br />
         <label>Student Number : </label>
-        <input type="text" placeholder="ex. 709603" name="username" required />
+        <input
+          type="text"
+          placeholder="ex. 709603"
+          name="username"
+          id="username"
+          required
+        />
         <br />
         <br />
         <label>Password : </label>
@@ -21,6 +27,7 @@
           type="password"
           placeholder="********"
           name="password"
+          id="password"
           required
         />
         <br /><br />
