--- a/tHome.html
+++ b/tHome.html
@@ -22,11 +22,11 @@
         Check out a Book
       </button>
 
-      <button class="rtnBookBTN" onclick="window.location.href='addBook.html'">
+      <button class="rtnBookBTN" onclick="window.location.href='retBook.html'">
         Return a Book
       </button>
 
-      <button class="delBookBTN" onclick="window.location.href='addBook.html'">
+      <button class="delBookBTN" onclick="window.location.href='#'">
         Delete a Book
       </button>
 
