--- a/techLogin.html
+++ b/techLogin.html
@@ -17,6 +17,7 @@
           type="text"
           placeholder="ex. p9240r8kjsad09898"
           name="username"
+          id="username"
           required
         />
         <br />
@@ -26,6 +27,7 @@
           type="password"
           placeholder="********"
           name="password"
+          id="password"
           required
         />
         <br /><br />
