added the main login page and file for images

--- a/studLogin.html
+++ b/studLogin.html
@@ -10,7 +10,12 @@
     <center><h1>Student Login</h1></center>
     <form action="sHome.html">
       <div class="cont1">
-        <button type="button" class="cancelBtn">Cancel</button>
+        <button
+          class="cancelBtn"
+          onclick="window.location.href='mainLogin.html'"
+        >
+          Cancel
+        </button>
         <br /><br />
         <label>Student Number : </label>
         <input
