--- a/tHome.html
+++ b/tHome.html
@@ -12,8 +12,8 @@
 
       <!--Directory of Buttons-->
       <button class="addBookBTN" onclick="window.location.href='addBook.html'">
-        Add a Book</button
-      >`
+        Add a Book
+      </button>
 
       <button
         class="checkBookBTN"
