--- a/techLogin.html
+++ b/techLogin.html
@@ -10,7 +10,12 @@
     <center><h1>Technician Login</h1></center>
     <form action="tHome.html">
       <div class="cont1">
-        <button type="button" class="cancelBtn">Cancel</button>
+        <button
+          class="cancelBtn"
+          onclick="window.location.href='mainLogin.html'"
+        >
+          Cancel
+        </button>
         <br /><br />
         <label>Technician Id : </label>
         <input
