added both delete a book page and student search results

--- a/tHome.html
+++ b/tHome.html
@@ -26,7 +26,7 @@
         Return a Book
       </button>
 
-      <button class="delBookBTN" onclick="window.location.href='#'">
+      <button class="delBookBTN" onclick="window.location.href='delBook.html'">
         Delete a Book
       </button>
 
