--- a/studentSearchResults.html
+++ b/studentSearchResults.html
@@ -2,10 +2,19 @@
 <html lang="en">
   <link rel="stylesheet" href="studentSearchResults.css" />
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Search Results</title>
   </head>
-  <body></body>
+  <body>
+    <center><h1>Search Results</h1></center>
+    <div class="sSR">
+      <center>[X] amount of Search Results</center>
+      <button
+        class="cancelBtn"
+        onclick="window.location.href='studentSearch.html'"
+      >
+        Return
+      </button>
+    </div>
+  </body>
 </html>
