--- a/addBook.html
+++ b/addBook.html
@@ -4,6 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add a Book Page</title>
+    ,<script src="addBook.js"></script>
   </head>
   <body>
     <center><h1>Add Book Information</h1></center>
@@ -42,9 +43,9 @@
         <br />
         <br />
         <label>Book Type : </label>
-        <input type="radio" name="typBookL" id="typBookL" required />Ficton
-        <input type="radio" name="typBookL" id="typBookL" required />Non-Fiction
-        <input type="radio" name="typBookL" id="typBookL" required />Graphic
+        <input type="radio" name="typBookL" id="typFBookL" required />Ficton
+        <input type="radio" name="typBookL" id="typNFBookL" required />Non-Fiction
+        <input type="radio" name="typBookL" id="typGBookL" required />Graphic
         Novel <br />
         <br />
         <label for="pubBookL">Publication Date : </label>
@@ -59,7 +60,7 @@
 
         <!--Submit Form-->
         <br /><br />
-        <button type="submit" class="subBookL">Add the Book</button>
+        <button type="submit" class="subBookL" onclick="addNewBook(this.form);">Add the Book</button>
       </div>
     </form>
   </body>
