--- a/addBook.html
+++ b/addBook.html
@@ -4,7 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Add a Book Page</title>
-    ,<script src="addBook.js"></script>
+    <script src="addBook.js"></script>
   </head>
   <body>
     <center><h1>Add Book Information</h1></center>
@@ -43,19 +43,19 @@
         <br />
         <br />
         <label>Book Type : </label>
-        <input type="radio" name="typBookL" id="typFBookL" required />Ficton
-        <input type="radio" name="typBookL" id="typNFBookL" required />Non-Fiction
-        <input type="radio" name="typBookL" id="typGBookL" required />Graphic
+        <input type="radio" name="typBookL" id="typFBookL" value="Fiction" required />Ficton
+        <input type="radio" name="typBookL" id="typNFBookL" value="Non-Fiction" required />Non-Fiction
+        <input type="radio" name="typBookL" id="typGBookL" value="Graphic Novel"required />Graphic
         Novel <br />
         <br />
         <label for="pubBookL">Publication Date : </label>
         <select name="pubBookL" id="pubBookL" required>
-          <option value="op1BookL">Before 2000</option>
-          <option value="op2BookL">2001-2005</option>
-          <option value="op3BookL">2006-2010</option>
-          <option value="op2BookL">2011-2015</option>
-          <option value="op2BookL">2016-2020</option>
-          <option value="op2BookL">2021-2023</option>
+          <option value="Before 2000">Before 2000</option>
+          <option value="2001-2005">2001-2005</option>
+          <option value="2006-2010">2006-2010</option>
+          <option value="2011-2015">2011-2015</option>
+          <option value="2016-2020">2016-2020</option>
+          <option value="2021-2023">2021-2023</option>
         </select>
 
         <!--Submit Form-->
