--- a/studentSearch.html
+++ b/studentSearch.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <title>Student Search Page</title>
+    <script src="studentSearch.js"></script>
   </head>
   <body>
     <center><h1>Student Search Page</h1></center>
@@ -13,7 +14,7 @@
     >
       Cancel
     </button>
-      <form class="addBook2"action="#">
+      <form class="addBook2">
         <hr />
         <center>
           <p>Please input all known information for a more accurate search</p>
@@ -37,24 +38,24 @@
         <br />
         <br />
         <label>Book Type : </label>
-        <input type="checkbox" name="typBookS" id="typBookS" />Ficton
-        <input type="checkbox" name="typBookS" id="typBookS" />Non-Fiction
-        <input type="checkbox" name="typBookS" id="typBookS" />Graphic Novel
+        <input type="checkbox" name="typBookS0" id="Ficton" value="Ficton"/>Ficton
+        <input type="checkbox" name="typBookS1" id="Non-Fiction" value="Non-Fiction"/>Non-Fiction
+        <input type="checkbox" name="typBookS2" id="Graphic Novel" value="Graphic Novel"/>Graphic Novel
         <br />
         <br />
         <label for="pubBookS">Publication Date : </label>
         <select name="pubBookS" id="pubBookS">
-          <option value="op1BookS">Before 2000</option>
-          <option value="op2BookS">2001-2005</option>
-          <option value="op3BookS">2006-2010</option>
-          <option value="op2BookS">2011-2015</option>
-          <option value="op2BookS">2016-2020</option>
-          <option value="op2BookS">2021-2023</option>
+          <option value="Before 2000">Before 2000</option>
+          <option value="2001-2005">2001-2005</option>
+          <option value="2006-2010">2006-2010</option>
+          <option value="2011-2015">2011-2015</option>
+          <option value="2016-2020">2016-2020</option>
+          <option value="2021-2023">2021-2023</option>
         </select>
 
         <!--Submit Form-->
         <br /><br />
-        <button type="submit" class="subBookS">Search!</button>
+        <button type="submit" class="subBookS" onclick="getStudentSearchData(this.form);">Search!</button>
       </div>
     </form>
   </body>
