--- a/checkBook.html
+++ b/checkBook.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <center><h1>Add Book Information for Checkout</h1></center>
-   <div class="cBook1">
-    <button class="cancelBtn" onclick="window.location.href='#'">Cancel</button>
-   <form class="cBook2" action="#">
-      
-<label for="scanBTN">Scan Barcode</label>
-<button class="scanBTN">Scan</button>
+    <div class="cBook1">
+      <button class="cancelBtn" onclick="window.location.href='#'">
+        Cancel
+      </button>
+      <form class="cBook2" action="#">
+        <label for="scanBTN">Scan Barcode</label>
+        <button class="scanBTN">Scan</button>
 
         <br /><br />
         <!--Start of Form-->
@@ -34,12 +35,15 @@
           required
         />
 
-<p>**All books that are checked out have a duration of 20 days before they are marked overdue</p>
+        <p>
+          **All books that are checked out have a duration of 20 days before
+          they are marked overdue
+        </p>
 
         <!--Submit Form-->
         <br />
         <button type="submit" class="subCBook">Checkout the Book</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </body>
 </html>
