--- a/delBook.html
+++ b/delBook.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Delete a Book</title>
   </head>
+  <!-- Empty space to display the books that are available to delete -->
   <body>
     <center><h1>Delete a Book</h1></center>
     <div class="delBookBlock">
