--- a/retBook.html
+++ b/retBook.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <center><h1>Add Book Information for Return</h1></center>
-   <div class="rBook1">
-    <button class="cancelBtn" onclick="window.location.href='#'">Cancel</button>
-   <form class="rBook2" action="#">
-      
-<label for="scanBTN">Scan Barcode</label>
-<button class="scanBTN">Scan</button>
+    <div class="rBook1">
+      <button class="cancelBtn" onclick="window.location.href='#'">
+        Cancel
+      </button>
+      <form class="rBook2" action="#">
+        <label for="scanBTN">Scan Barcode</label>
+        <button class="scanBTN">Scan</button>
 
         <br /><br />
         <!--Start of Form-->
@@ -37,7 +38,7 @@
         <!--Submit Form-->
         <br />
         <button type="submit" class="subRBook">Return the Book</button>
-      </div>
-    </form>
+      </form>
+    </div>
   </body>
 </html>
