--- a/addBook.html
+++ b/addBook.html
@@ -8,10 +8,11 @@
   </head>
   <body>
     <center><h1>Add Book Information</h1></center>
-   <div class="addBook1">
-    <button class="cancelBtn" onclick="window.location.href='tHome.html'">Cancel</button>
-   <form class="addBook2" action="#">
-      
+    <div class="addBook1">
+      <button class="cancelBtn" onclick="window.location.href='tHome.html'">
+        Cancel
+      </button>
+      <form class="addBook2">
         <br /><br />
         <!--Start of Form-->
         <label for="tilBookL">Title : </label>
@@ -40,14 +41,37 @@
           id="numBookL"
           required
         />
+
         <br />
         <br />
         <label>Book Type : </label>
-        <input type="radio" name="typBookL" id="typFBookL" value="Fiction" required />Ficton
-        <input type="radio" name="typBookL" id="typNFBookL" value="Non-Fiction" required />Non-Fiction
-        <input type="radio" name="typBookL" id="typGBookL" value="Graphic Novel"required />Graphic
-        Novel <br />
+        <input
+          type="radio"
+          name="typBookL"
+          id="typFBookL"
+          value="Fiction"
+          required
+        />Ficton
+
+        <input
+          type="radio"
+          name="typBookL"
+          id="typNFBookL"
+          value="Non-Fiction"
+          required
+        />Non-Fiction
+
+        <input
+          type="radio"
+          name="typBookL"
+          id="typGBookL"
+          value="Graphic Novel"
+          required
+        />Graphic Novel
+
         <br />
+        <br />
+
         <label for="pubBookL">Publication Date : </label>
         <select name="pubBookL" id="pubBookL" required>
           <option value="Before 2000">Before 2000</option>
@@ -58,10 +82,12 @@
           <option value="2021-2023">2021-2023</option>
         </select>
 
-        <!--Submit Form-->
         <br /><br />
-        <button type="submit" class="subBookL" onclick="addNewBook(this.form);">Add the Book</button>
-      </div>
-    </form>
+        <!--Submit Form-->
+        <button type="submit" class="subBookL" onclick="addNewBook(this.form);">
+          Add the Book
+        </button>
+      </form>
+    </div>
   </body>
 </html>
