added realistic search function and cleaned up the search results page

--- a/studentSearchResults.html
+++ b/studentSearchResults.html
@@ -11,14 +11,13 @@
     <center><h1>Search Results</h1></center>
     <div class="sSR">
       <center>
-        [X] amount of Search Results
+        Search Results
         <br />
-        <br /><textarea
-          name="display"
-          id="display"
-          rows="15"
-          cols="33"
-        ></textarea>
+        <br />
+        <p>Atleast 1 or more Search Terms Match:</p>
+        <textarea name="display" id="display1" rows="5" cols="33"></textarea>
+        <br />
+        <textarea name="display" id="display2" rows="1" cols="33"></textarea>
         <br /><button
           class="cancelBtn"
           onclick="window.location.href='studentSearch.html'"
