--- a/addBook.html
+++ b/addBook.html
@@ -84,7 +84,7 @@
 
         <br /><br />
         <!--Submit Form-->
-        <button type="submit" class="subBookL" onclick="addNewBook(this.form);">
+        <button type="button" class="subBookL" onclick="addNewBook(this.form);">
           Add the Book
         </button>
       </form>
