Working If Statement Search With Arrays
Still need to get the results to display

--- a/studentSearch.html
+++ b/studentSearch.html
@@ -57,6 +57,7 @@
         <br />
         <label for="pubBookS">Publication Date : </label>
         <select name="pubBookS" id="pubBookS">
+          <option value="" selected="selected" disabled>Select One</option>
           <option value="Before 2000">Before 2000</option>
           <option value="2001-2005">2001-2005</option>
           <option value="2006-2010">2006-2010</option>
