--- a/studentSearchResults.html
+++ b/studentSearchResults.html
@@ -15,9 +15,7 @@
         <br />
         <br />
         <p>Atleast 1 or more Search Terms Match:</p>
-        <textarea name="display" id="display1" rows="5" cols="33"></textarea>
-        <br />
-        <textarea name="display" id="display2" rows="1" cols="33"></textarea>
+        <table id="display1" class="display1"> <table style='border-collapse: collapse; width: 100%;'> <tr><th style='border: 1px solid black;height: 60px;'>Result Number</th><th style='border: 1px solid black;'>Book Title</th><th style='border: 1px solid black;'>Book Number</th><th style='border: 1px solid black;'>Author Name</th><th style='border: 1px solid black;'>Book Type</th><th style='border: 1px solid black;'>Book Genre</th><th style='border: 1px solid black;'>Publication Date</th><th style='border: 1px solid black;'>Available?</th></tr></table>
         <br /><button
           class="cancelBtn"
           onclick="window.location.href='studentSearch.html'"
