fixed the refresh deleting things. added checkout a book functionality

--- a/addBook.html
+++ b/addBook.html
@@ -6,7 +6,7 @@
     <title>Add a Book Page</title>
     <script src="addBook.js"></script>
   </head>
-  <body>
+  <body onload="refreshFunction()">
     <center><h1>Add Book Information</h1></center>
     <div class="addBook1">
       <button class="cancelBtn" onclick="window.location.href='tHome.html'">
