--- a/studentSearchResults.html
+++ b/studentSearchResults.html
@@ -14,8 +14,8 @@
         Search Results
         <br />
         <br />
-        <p>Atleast 1 or more Search Terms Match:</p>
-        <table id="display1" class="display1"> <table style='border-collapse: collapse; width: 100%;'> <tr><th style='border: 1px solid black;height: 60px;'>Result Number</th><th style='border: 1px solid black;'>Book Title</th><th style='border: 1px solid black;'>Book Number</th><th style='border: 1px solid black;'>Author Name</th><th style='border: 1px solid black;'>Book Type</th><th style='border: 1px solid black;'>Book Genre</th><th style='border: 1px solid black;'>Publication Date</th><th style='border: 1px solid black;'>Available?</th></tr></table>
+        <p>Search Results:</p>
+        <textarea name="display1" id="display1" cols="30" rows="50"></textarea>
         <br /><button
           class="cancelBtn"
           onclick="window.location.href='studentSearch.html'"
