--- a/checkBook.html
+++ b/checkBook.html
@@ -13,7 +13,9 @@
         Cancel
       </button>
       <form class="cBook2" action="#">
-        <br /><br />
+        <p>Please input the Book Number to proceed</p>
+        <hr />
+        <br />
         <!--Start of Form-->
 
         <label for="numCBook">Book Number : </label>
