--- a/studLogin.html
+++ b/studLogin.html
@@ -4,6 +4,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Student Login Page</title>
+    <script src="studLogin.js"></script>
   </head>
 
   <body>
@@ -21,8 +22,8 @@
         <input
           type="text"
           placeholder="ex. 709603"
-          name="username"
-          id="username"
+          name="UsernameL"
+          id="UsernameL"
           required
         />
         <br />
@@ -31,8 +32,8 @@
         <input
           type="password"
           placeholder="********"
-          name="password"
-          id="password"
+          name="PasswordL"
+          id="PasswordL"
           required
         />
         <br /><br />
