--- a/studentSearchResults.html
+++ b/studentSearchResults.html
@@ -5,6 +5,10 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Search Results</title>
+    <p>
+      These results are not updated in real-time. For current Info, please
+      refresh frequently
+    </p>
   </head>
   <!-- onload to load in the existing local storage items -->
   <body onload="displayResults();">
