--- a/techLogin.html
+++ b/techLogin.html
@@ -22,8 +22,8 @@
         <input
           type="text"
           placeholder="ex. p9240r8kjsad09898"
-          name="username"
-          id="username"
+          name="Username"
+          id="UsernameL"
           required
         />
         <br />
@@ -32,14 +32,12 @@
         <input
           type="password"
           placeholder="********"
-          name="password"
-          id="password"
+          name="Password"
+          id="PasswordL"
           required
         />
         <br /><br />
-        <button type="submit" class="subBtn" onclick="loginFunc(this.form);">
-          Login
-        </button>
+        <button type="submit" class="subBtn">Login</button>
         <br />
         <p>Forgot <a href="forgot.html">Password?</a></p>
       </div>
