--- a/sHome.html
+++ b/sHome.html
@@ -4,25 +4,17 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student's Home Page</title>
+    <script src="sHome.js"></script>
   </head>
-  <body>
+  <body onload="loadID()">
     <div class="directoryL">
       <center><h1>Student's Home Page</h1></center>
       <center>
-        <p>Welcome! You are currently logged in as [Student ID]</p>
+        <p>Welcome! You are currently logged in as</p>
+        <p id="sID"></p>
       </center>
 
       <!--Directory of Buttons-->
-      <button
-        class="checkBookBTN"
-        onclick="window.location.href='checkBook.html'"
-      >
-        Check out a Book
-      </button>
-
-      <button class="rtnBookBTN" onclick="window.location.href='retBook.html'">
-        Return a Book
-      </button>
 
       <button
         class="serBookBTN"
