--- a/addBook.html
+++ b/addBook.html
@@ -85,7 +85,7 @@
         <br /><br />
         <!--Submit Form-->
         <button type="submit" class="subBookL" onclick="addNewBook(this.form);">
-          Add the Book
+          Add Book
         </button>
       </form>
     </div>
